--- a/.gitignore
+++ b/.gitignore
@@ -435,4 +435,6 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+/.vscode
+
 # End of https://www.gitignore.io/api/unity,windows,visualstudio
